--- a/Assignment_1 (1).ipynb
+++ b/Assignment_1 (1).ipynb
@@ -41,7 +41,7 @@
       "metadata": {
         "id": "s07c7JK7Oqt-"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -54,9 +54,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "685dbc4e-4324-407a-953c-51b52eaf0e28"
+        "outputId": "9c5d9d31-8b6d-437e-e8de-9a7d06f7efaa"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -66,7 +66,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 6
         }
       ]
     },
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "_ZHoml3kPqic"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -103,9 +103,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ab4a7a39-162a-4e2e-b2bc-db8139cf72c9"
+        "outputId": "a31b083f-00a5-409d-ea99-a3b679c20caf"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "fcVwbCc1QrQI"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -146,11 +146,11 @@
         "id": "MvbkMZpXYRaw",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 35
         },
-        "outputId": "1f4f286f-def4-4b2e-e478-4b773ca8455b"
+        "outputId": "33be0e7d-0c4e-4d35-8fef-af2e48d0c69c"
       },
-      "execution_count": 8,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -163,7 +163,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 15
         }
       ]
     },
@@ -207,7 +207,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8fc9482a-f4eb-4c0d-8a9e-87ad742736a9"
+        "outputId": "f8815726-f350-4665-8c3d-6aa564e059a2"
       },
       "execution_count": 17,
       "outputs": [
@@ -233,7 +233,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1c9a574e-c021-4ac8-c514-2976a37ceaf0"
+        "outputId": "1b24e87a-bb97-449a-97b9-c833446e6bb9"
       },
       "execution_count": 18,
       "outputs": [
@@ -268,9 +268,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c4b7cd67-91ff-4466-d4f5-d9c4cb35c0d7"
+        "outputId": "5cc2e6b1-7ae5-4ad5-e278-82813f808b3b"
       },
-      "execution_count": 19,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 22
         }
       ]
     },
@@ -297,6 +297,7 @@
       "cell_type": "code",
       "source": [
         "x=np.arange(9)\n",
+        "x\n",
         "x.reshape(3,3)"
       ],
       "metadata": {
@@ -304,9 +305,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4532e738-6298-4c80-a3d0-bdfc46c81b64"
+        "outputId": "b45dc9e8-997c-4602-e745-4bc92022fd52"
       },
-      "execution_count": 20,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -318,7 +319,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 23
         }
       ]
     },
@@ -344,9 +345,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cec58a3b-a4ba-47d8-c17f-26322d055f38"
+        "outputId": "5b77cc73-de72-4879-9805-ec55134e4ede"
       },
-      "execution_count": 21,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -356,7 +357,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 24
         }
       ]
     },
@@ -386,13 +387,13 @@
       "metadata": {
         "id": "T5OxJRZ8uvR7"
       },
-      "execution_count": 31,
+      "execution_count": 32,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "d={\"Name\":['surya','vasim','gokul'],\n",
+        "d={\"Name\":['Surya,','Vasim','Gokul'],\n",
         "   \"Age\":[20,21,22]}\n",
         "d1=pd.DataFrame(d)\n",
         "d1"
@@ -403,22 +404,22 @@
           "base_uri": "https://localhost:8080/",
           "height": 143
         },
-        "outputId": "1013a01e-1334-481a-847a-3fca56ed2612"
+        "outputId": "f8e7097b-1a90-454e-ee45-21a940fe1b77"
       },
-      "execution_count": 34,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "    Name  Age\n",
-              "0  surya   20\n",
-              "1  vasim   21\n",
-              "2  gokul   22"
+              "     Name  Age\n",
+              "0  Surya,   20\n",
+              "1   Vasim   21\n",
+              "2   Gokul   22"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c38d04c6-c9f8-497b-90f6-56dbe8e8190b\">\n",
+              "  <div id=\"df-7ece10d7-3ef2-4849-9d22-b53457662675\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -445,23 +446,23 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>surya</td>\n",
+              "      <td>Surya,</td>\n",
               "      <td>20</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>vasim</td>\n",
+              "      <td>Vasim</td>\n",
               "      <td>21</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>gokul</td>\n",
+              "      <td>Gokul</td>\n",
               "      <td>22</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c38d04c6-c9f8-497b-90f6-56dbe8e8190b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7ece10d7-3ef2-4849-9d22-b53457662675')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -512,12 +513,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c38d04c6-c9f8-497b-90f6-56dbe8e8190b button.colab-df-convert');\n",
+              "          document.querySelector('#df-7ece10d7-3ef2-4849-9d22-b53457662675 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c38d04c6-c9f8-497b-90f6-56dbe8e8190b');\n",
+              "          const element = document.querySelector('#df-7ece10d7-3ef2-4849-9d22-b53457662675');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -540,7 +541,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 35
         }
       ]
     },
@@ -560,16 +561,16 @@
         "start=datetime.datetime.strptime(\"01-01-2023\",\"%d-%m-%Y\")\n",
         "end=datetime.datetime.strptime(\"10-02-2023\",\"%d-%m-%Y\")\n",
         "x=pd.date_range(start,end)\n",
-        "x"
+        "x\n"
       ],
       "metadata": {
         "id": "dgyC0JhVYl4F",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "145bf6ef-265b-47d0-bec1-a3b9edc00376"
+        "outputId": "8a9d3c3e-fa11-40c5-8168-3fff6a90e7b6"
       },
-      "execution_count": 40,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -590,7 +591,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 27
         }
       ]
     },
@@ -615,7 +616,7 @@
       "metadata": {
         "id": "_XMC8aEt0llB"
       },
-      "execution_count": 43,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -630,9 +631,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 143
         },
-        "outputId": "42d0ea18-d732-4d29-a5b9-fbdf0008cbad"
+        "outputId": "982ffbb4-48f3-4a4c-de92-0573a0b17994"
       },
-      "execution_count": 44,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -645,7 +646,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-61ec06fa-89a8-400f-ae40-7c643ac56b14\">\n",
+              "  <div id=\"df-77b08ffe-7992-4197-82f8-048d924a0dd4\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -692,7 +693,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-61ec06fa-89a8-400f-ae40-7c643ac56b14')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-77b08ffe-7992-4197-82f8-048d924a0dd4')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -743,12 +744,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-61ec06fa-89a8-400f-ae40-7c643ac56b14 button.colab-df-convert');\n",
+              "          document.querySelector('#df-77b08ffe-7992-4197-82f8-048d924a0dd4 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-61ec06fa-89a8-400f-ae40-7c643ac56b14');\n",
+              "          const element = document.querySelector('#df-77b08ffe-7992-4197-82f8-048d924a0dd4');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -771,7 +772,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 31
         }
       ]
     }
